2012-07-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components_form_plugin.php: Add 
	first version of dynamic macros in network components of type
	plug-in

2012-07-19  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components.php
	godmode/modules/manage_network_components_form_plugin.php: Added
	to plugin components the macro fields and modify database schemma

2012-07-19 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora.js: fixed the doc header for the
	function "agent_autocomplete" that was very wrong, and now in this
	function when call with the id_server_name equal to false, the
	function doesn't save the id_server in hidden input.
	
	* include/functions_agents.php: added function
	"agents_check_agent_exists" that check if any agent exists into the
	DB (of course you can check if exist and it is enabled).
	
	* operation/search_agents.php: fixed the link to manage the agents
	show in the search.

2012-07-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/resource_registration.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/plugin_registration.php,
	operation/incidents/incident.php,
	mobile/operation/agents/monitor_status.php,
	mobile/operation/agents/view_agents.php: cleaned source code style.

	* operation/tree.php: improve the code for to set more readble.

2012-07-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* general/logon_ok.php, godmode/db/db_event.php,
	godmode/db/db_purge.php, include/functions_config.php,
	include/functions_ui.php, include/functions_netflow.php,
	include/functions.php, include/constants.php,